--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="index">
       <div class="container">
         <img src="#" alt="Слайдер-на главном фоне квадрокоптер" />
         <h1 class="about-quadrocopter">
