Графика всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,13 @@
   <body>
     <header class="header">
       <div>
-        <img class="logo-device" src="#" alt="Логотип Девайс" />
+        <img
+          class="logo-device"
+          src="./image/logodevice.svg"
+          alt="Логотип Девайс"
+          width="145"
+          height="36"
+        />
       </div>
       <form action="#" method="get">
         <input type="search" placeholder="Текст поиска" />
@@ -94,28 +100,52 @@
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="" />
+              <img
+                class="product-card-image"
+                src="./image/catalog-images/selfie-pod.jpeg"
+                alt="изображение селфи-палки"
+                width="360"
+                height="380"
+              />
               <h3 class="product-card-title">Любительская селфи-палка</h3>
             </a>
             <span class="product-card-price">500 ₽</span>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="" />
+              <img
+                class="product-card-image"
+                src="./image/catalog-images/selfie-pod-professional.jpeg"
+                alt="изображение профессиональной селфи-палки"
+                width="360"
+                height="380"
+              />
               <h3 class="product-card-title">Профессиональная селфи-палка</h3>
             </a>
             <span class="product-card-price">1500 ₽</span>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="" />
+              <img
+                class="product-card-image"
+                src="./image/catalog-images/selfie-pod-unwater.jpeg"
+                alt="изображение непотопляемой селфи-палки"
+                width="360"
+                height="380"
+              />
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
             </a>
             <span class="product-card-price">2500 ₽</span>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="" />
+              <img
+                class="product-card-image"
+                src="./image/catalog-images/selfie-pod-followme.jpeg"
+                alt="изображение селфи-палки с рукой"
+                width="360"
+                height="380"
+              />
               <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
             </a>
             <span class="product-card-price">1500 ₽</span>
@@ -137,7 +167,13 @@
 
     <footer class="footer">
       <div class="links-to-services">
-        <img class="logo-device" src="#" alt="Логотип Девайс" />
+        <img
+          class="logo-device"
+          src="./image/other-images/devicelogo-footer.svg"
+          alt="Логотип Девайс"
+          width="145"
+          height="36"
+        />
         <ul class="Socials">
           <li class="links-to-services-adress">
             <a href="">
