--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   <body>
     <header class="header">
       <div>
-        <img class="logo-device" src="#" alt="Логотип Девайс" />
+        <img
+          class="logo-device"
+          src="./image/logodevice.svg"
+          alt="Логотип Девайс"
+          width="145"
+          height="38"
+        />
       </div>
       <form action="#" method="get">
         <input type="search" placeholder="Поиск по сайту" />
+        <input type="submit" value="Войти" />
       </form>
 
       <div class="user-menu">
@@ -48,7 +55,12 @@
 
     <main class="index">
       <div class="container">
-        <img src="#" alt="Слайдер-на главном фоне квадрокоптер" />
+        <img
+          src="./image/other-images/quadrocopter.png"
+          alt="Слайдер-на главном фоне квадрокоптер"
+          width="560"
+          height="560"
+        />
         <h1 class="about-quadrocopter">
           Порхает как бабочка, жалит как пчела!
         </h1>
@@ -153,8 +165,9 @@
           </p>
           <form action="#">
             <input type="email" placeholder="Ваш email" />
+            <input type="submit" value="Подписаться" />
           </form>
-          <button class="subscribe">Подписаться</button>
+
           <span>Это бесплатно</span>
         </div>
       </div>
@@ -162,7 +175,13 @@
 
     <footer class="footer">
       <div class="links-to-services">
-        <img class="logo-device" src="#" alt="Логотип Девайс" />
+        <img
+          class="logo-device"
+          src="./image/other-images/devicelogo-footer.svg"
+          alt="Логотип Девайс"
+          width="145"
+          height="36"
+        />
         <ul class="Socials">
           <li class="links-to-services-adress">
             <a href="">
