Базовая стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Device</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -69,10 +69,12 @@
           замаскированным под стандартную камеру.
         </p>
         <a href="#">Подробнее</a>
-        <span class="quadrocopter-range">800 м 50 м</span>
-        <span class="quadrocopter-radius">
-          Дальность полета Радиус поражения
-        </span>
+        <dl>
+          <dt>800м</dt>
+          <dd>Дальность полета</dd>
+          <dt>500м</dt>
+          <dd>Радиус поражения</dd>
+        </dl>
 
         <div class="catalog-category-list">
           <ul>
