--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Каталог товаров Device</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="header">
